--- a/template.Rmd
+++ b/template.Rmd
@@ -1,21 +1,107 @@
 ---
 title: "Simple document"
-output: html_document
+output: github_document
 ---
+```{r,echo = FALSE, message = FALSE}
+library(tidyverse)
+library(haven)
+```
+## import some data
 
-I'm an R Markdown document! 
-
-# Section 1
-
-Here's a **code chunk** that samples from 
-a _normal distribution_:
+I want to import 'FAS_litters.csv'.
 
 ```{r}
-samp = rnorm(100)
-length(samp)
+litters_df = read_csv("data/FAS_litters.csv")
+litters_df
+
+read_csv("/Users/huangzhuolun/Desktop/data_wrangling_I/data/FAS_litters.csv")
 ```
 
-# Section 2
+yea! I imported the dataset. now I want to better names.
 
-I can take the mean of the sample, too!
-The mean is `r mean(samp)`.
+imported data
+
+```{r}
+names(litters_df)
+litters_df = janitor::clean_names(litters_df) 
+### janitor is a large function, in this way :: do not need to upload a large function 
+litters_df
+```
+
+Yay! now I have better names. let's look at the dataset.
+
+```{r}
+litters_df
+head(litters_df)
+head(litters_df,20)
+tail(litters_df)
+```
+
+one I use a lot is:
+
+```{r,eval=FALSE}
+view(litters_df)
+### 看数据
+```
+
+```{r}
+skimr::skim(litters_data)
+```
+
+## arguments in "read_csv"
+
+```{r}
+litters_df = read_csv("./data/FAS_litters.csv",
+                      skip = 10, col_names = FALSE,
+                      na = "Low8")
+```
+
+```{r}
+litters_data = read_csv(file = "./data/FAS_litters.csv",
+  col_types = cols(
+    Group = col_character(),
+    `Litter Number` = col_character(),
+    `GD0 weight` = col_double(),
+    `GD18 weight` = col_double(),
+    `GD of Birth` = col_integer(),
+    `Pups born alive` = col_integer(),
+    `Pups dead @ birth` = col_integer(),
+    `Pups survive` = col_integer()
+  )
+)
+```
+
+reading from excel
+```{r}
+library(readxl)
+mlb11_df = read_excel("data/mlb11.xlsx")
+
+````
+
+```{r}
+fellow_df = read_excel("data/LotR_words.xlsx",range="B3:D6")
+
+##read a SAS file
+
+```
+
+```{r}
+pulse_df = read_sas("data/public_pulse_data.sas7bdat")
+
+```
+
+## why to never use "read_csv"
+```{r}
+litters_df_base = read.csv("data/FAS_litters.csv")
+```
+
+## how do I export data 
+
+there is a good day
+```{r}
+
+write_csv(fellow_df,"data/fellowship_words.csv")
+
+
+```
+
