--- a/template.Rmd
+++ b/template.Rmd
@@ -4,6 +4,7 @@ output: github_document
 ---
 ```{r,echo = FALSE, message = FALSE}
 library(tidyverse)
+library(readxl)
 library(haven)
 ```
 ## import some data
@@ -39,21 +40,27 @@ tail(litters_df)
 
 one I use a lot is:
 
-```{r,eval=FALSE}
+```{r,eval = FALSE}
 view(litters_df)
 ### 看数据
 ```
 
+here is a skim
+
 ```{r}
-skimr::skim(litters_data)
+skimr::skim(litters_df)
+# it is the mean or summary of the whole data
 ```
 
-## arguments in "read_csv"
+## arguments in `read_csv`
 
-```{r}
-litters_df = read_csv("./data/FAS_litters.csv",
-                      skip = 10, col_names = FALSE,
-                      na = "Low8")
+```{r,eval = FALSE}
+litters_df = 
+  read_csv(
+    "data/FAS_litters.csv",
+    skip = 5,
+    col_names = FALSE,
+    na = "Low8")
 ```
 
 ```{r}
@@ -69,25 +76,23 @@ litters_data = read_csv(file = "./data/FAS_litters.csv",
     `Pups survive` = col_integer()
   )
 )
+litters_data
 ```
 
-reading from excel
+## reading from excel
+
 ```{r}
-library(readxl)
 mlb11_df = read_excel("data/mlb11.xlsx")
+```
 
-````
 
 ```{r}
-fellow_df = read_excel("data/LotR_words.xlsx",range="B3:D6")
+fellow_df = read_excel("data/LotR_words.xlsx",range = "B3:D6")
+```
 
 ##read a SAS file
-
-```
-
-```{r}
+```{r,eval = FALSE}
 pulse_df = read_sas("data/public_pulse_data.sas7bdat")
-
 ```
 
 ## why to never use "read_csv"
@@ -99,9 +104,7 @@ litters_df_base = read.csv("data/FAS_litters.csv")
 
 there is a good day
 ```{r}
-
 write_csv(fellow_df,"data/fellowship_words.csv")
-
 
 ```
 
